--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://61fdd359-e094-449c-9f09-8b4e27959e71.preview.emergentagent.com
 WDS_SOCKET_PORT=443
